[project]
name = "moneybank-models"
version = "0.1.0"
description = "moneyandbankingproject"
authors = [
    {name = "AjaiUpadhyaya",email = "ajaiupad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.1,<5.0.0)",
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
